rust/transpiler/snapshots/control_flow@async_loops@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/control_flow/async_loops.hyper
---
from hyper import escape, replace_markers

def AsyncLoops(stream: object, connection: object) -> str:
    _parts = []
    async for item in stream:
        _parts.append(f"""<div>‹ESCAPE:{item}›</div>""")
    async with connection as conn:
        _parts.append(f"""<span>Connected: ‹ESCAPE:{conn.id}›</span>""")
    async with connection as conn:
        async for message in conn.messages:
            _parts.append(f"""<p>‹ESCAPE:{message}›</p>""")
    return replace_markers("".join(_parts))
