rust/transpiler/snapshots/control_flow@complex_nested@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/control_flow/complex_nested.hyper
---
injections:
  - end: 14
    prefix: "from hyper import escape, replace_markers\n\ndef ComplexNested("
    start: 0
    suffix: ""
    type: python
  - end: 29
    prefix: ", "
    start: 15
    suffix: ""
    type: python
  - end: 40
    prefix: ", "
    start: 30
    suffix: ""
    type: python
  - end: 86
    prefix: ") -> str:\n    _parts = []\n    _parts.append(\"<div class=\\\"container\\\">\")\n    if "
    start: 78
    suffix: ""
    type: python
  - end: 119
    prefix: ":\n        for section in "
    start: 111
    suffix: ""
    type: python
  - end: 219
    prefix: ":\n            _parts.append(\"<section id=\\\"section-{section['id']}\\\">\")\n            if "
    start: 191
    suffix: ""
    type: python
  - end: 262
    prefix: ":\n                match "
    start: 247
    suffix: ""
    type: python
  - end: 301
    prefix: ":\n                    case "
    start: 293
    suffix: ""
    type: python
  - end: 353
    prefix: ":\n                        _parts.append(f\"\"\"<h1>‹ESCAPE:{"
    start: 335
    suffix: ""
    type: python
  - end: 394
    prefix: "}›</h1>\"\"\")\n                    case "
    start: 388
    suffix: ""
    type: python
  - end: 489
    prefix: ":\n                        _parts.append(\"<ul>\")\n                        for item in "
    start: 473
    suffix: ""
    type: python
  - end: 548
    prefix: ":\n                            if "
    start: 530
    suffix: ""
    type: python
  - end: 623
    prefix: ":\n                                _parts.append(f\"\"\"<li class=\"active\">‹ESCAPE:{"
    start: 609
    suffix: ""
    type: python
  - end: 729
    prefix: "}›</li>\"\"\")\n                            else:\n                                _parts.append(f\"\"\"<li>‹ESCAPE:{"
    start: 715
    suffix: ""
    type: python
  - end: 880
    prefix: "}›</li>\"\"\")\n                        _parts.append(\"</ul>\")\n                    case "
    start: 874
    suffix: ""
    type: python
  - end: 933
    prefix: ":\n                        _parts.append(f\"\"\"<p>‹ESCAPE:{"
    start: 913
    suffix: ""
    type: python
  - end: 968
    prefix: "}›</p>\"\"\")\n                    case "
    start: 967
    suffix: ":\n                        _parts.append(\"\"\"<div>Unknown type</div>\"\"\")\n            else:\n                _parts.append(\"\"\"<div class=\"hidden\">Section hidden</div>\"\"\")\n            _parts.append(\"</section>\")\n    else:\n        _parts.append(\"\"\"<p>Content hidden</p>\"\"\")\n    _parts.append(\"</div>\")\n    return replace_markers(\"\".join(_parts))\n"
    type: python
ranges:
  - compiled_end: 75
    compiled_start: 61
    range_type: Python
    source_end: 14
    source_start: 0
  - compiled_end: 91
    compiled_start: 77
    range_type: Python
    source_end: 29
    source_start: 15
  - compiled_end: 103
    compiled_start: 93
    range_type: Python
    source_end: 40
    source_start: 30
  - compiled_end: 191
    compiled_start: 183
    range_type: Python
    source_end: 86
    source_start: 78
  - compiled_end: 224
    compiled_start: 216
    range_type: Python
    source_end: 119
    source_start: 111
  - compiled_end: 339
    compiled_start: 311
    range_type: Python
    source_end: 219
    source_start: 191
  - compiled_end: 378
    compiled_start: 363
    range_type: Python
    source_end: 262
    source_start: 247
  - compiled_end: 413
    compiled_start: 405
    range_type: Python
    source_end: 301
    source_start: 293
  - compiled_end: 486
    compiled_start: 470
    range_type: Python
    source_end: 353
    source_start: 335
  - compiled_end: 529
    compiled_start: 523
    range_type: Python
    source_end: 394
    source_start: 388
  - compiled_end: 629
    compiled_start: 613
    range_type: Python
    source_end: 489
    source_start: 473
  - compiled_end: 680
    compiled_start: 662
    range_type: Python
    source_end: 548
    source_start: 530
  - compiled_end: 772
    compiled_start: 760
    range_type: Python
    source_end: 623
    source_start: 609
  - compiled_end: 893
    compiled_start: 881
    range_type: Python
    source_end: 729
    source_start: 715
  - compiled_end: 983
    compiled_start: 977
    range_type: Python
    source_end: 880
    source_start: 874
  - compiled_end: 1057
    compiled_start: 1039
    range_type: Python
    source_end: 933
    source_start: 913
  - compiled_end: 1094
    compiled_start: 1093
    range_type: Python
    source_end: 968
    source_start: 967
