rust/transpiler/snapshots/control_flow@match_guards@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/control_flow/match_guards.hyper
---
from hyper import escape, replace_markers

def MatchGuards(value: int, data: dict) -> str:
    _parts = []
    match value:
        case x if x < 0:
            _parts.append(f"""<span>Negative: ‹ESCAPE:{x}›</span>""")
        case x if x == 0:
            _parts.append("""<span>Zero</span>""")
        case x if x > 100:
            _parts.append(f"""<span>Large: ‹ESCAPE:{x}›</span>""")
        case x:
            _parts.append(f"""<span>Normal: ‹ESCAPE:{x}›</span>""")
    match data:
        case {"type": "user", "admin": True}:
            _parts.append("""<span>Admin user</span>""")
        case {"type": "user", "admin": False}:
            _parts.append("""<span>Regular user</span>""")
        case {"type": t} if t.startswith("system"):
            _parts.append(f"""<span>System: ‹ESCAPE:{t}›</span>""")
        case _:
            _parts.append("""<span>Unknown</span>""")
    return replace_markers("".join(_parts))
