rust/transpiler/snapshots/edge_cases@forms@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/edge_cases/forms.hyper
---
injections:
  - end: 521
    prefix: "from hyper import escape, replace_markers\n\ndef Forms(user: dict, errors: dict, options: list, csrf_token: str) -> str:\n    _parts = []\n    _parts.append(\"<form action=\\\"/submit/{user['id']}\\\" method=\\\"POST\\\" enctype=\\\"multipart/form-data\\\">\")\n    _parts.append(\"<input type=\\\"hidden\\\" name=\\\"csrf\\\" value=\\\"{csrf_token}\\\" />\")\n    _parts.append(\"<div class=\\\"field {'error' if errors.get('name') else ''}\\\">\")\n    _parts.append(\"<label for=\\\"name\\\">\")\n    _parts.append(\"Name\")\n    _parts.append(\"</label>\")\n    _parts.append(\"<input type=\\\"text\\\" id=\\\"name\\\" name=\\\"name\\\" value=\\\"{user.get('name', '')}\\\" required />\")\n    if errors.get('name'):\n        _parts.append(f\"\"\"<span class=\"error\">‹ESCAPE:{"
    start: 507
    suffix: ""
    type: python
  - end: 1203
    prefix: "}›</span>\"\"\")\n    _parts.append(\"</div>\")\n    _parts.append(\"<div class=\\\"field\\\">\")\n    _parts.append(\"<label for=\\\"email\\\">\")\n    _parts.append(\"Email\")\n    _parts.append(\"</label>\")\n    _parts.append(\"<input type=\\\"email\\\" id=\\\"email\\\" name=\\\"email\\\" value=\\\"{user.get('email', '')}\\\" />\")\n    _parts.append(\"</div>\")\n    _parts.append(\"<div class=\\\"field\\\">\")\n    _parts.append(\"<label for=\\\"password\\\">\")\n    _parts.append(\"Password\")\n    _parts.append(\"</label>\")\n    _parts.append(\"<input type=\\\"password\\\" id=\\\"password\\\" name=\\\"password\\\" minlength=\\\"8\\\" />\")\n    _parts.append(\"</div>\")\n    _parts.append(\"<div class=\\\"field\\\">\")\n    _parts.append(\"<label for=\\\"role\\\">\")\n    _parts.append(\"Role\")\n    _parts.append(\"</label>\")\n    _parts.append(\"<select id=\\\"role\\\" name=\\\"role\\\">\")\n    for option in options:\n        _parts.append(f\"\"\"<option value=\"{option['value']}\" \"selected\" if option['value'] == user.get('role') else \"\"=‹SPREAD:{\"selected\" if option['value'] == user.get('role') else \"\"}›>‹ESCAPE:{"
    start: 1188
    suffix: ""
    type: python
  - end: 1719
    prefix: "}›</option>\"\"\")\n    _parts.append(\"</select>\")\n    _parts.append(\"</div>\")\n    _parts.append(\"<div class=\\\"field\\\">\")\n    _parts.append(\"<input type=\\\"checkbox\\\" id=\\\"active\\\" name=\\\"active\\\" \"checked\" if user.get('active') else \"\"=\\\"{\"checked\" if user.get('active') else \"\"}\\\" />\")\n    _parts.append(\"<label for=\\\"active\\\">\")\n    _parts.append(\"Active\")\n    _parts.append(\"</label>\")\n    _parts.append(\"</div>\")\n    _parts.append(\"<div class=\\\"field\\\">\")\n    for option in options:\n        _parts.append(f\"\"\"<label><input type=\"radio\" name=\"type\" value=\"{option['value']}\" \"checked\" if option['value'] == user.get('type') else \"\"=‹SPREAD:{\"checked\" if option['value'] == user.get('type') else \"\"}› />‹ESCAPE:{"
    start: 1704
    suffix: "}›</label>\"\"\")\n    _parts.append(\"</div>\")\n    _parts.append(\"<div class=\\\"field\\\">\")\n    _parts.append(\"<label for=\\\"bio\\\">\")\n    _parts.append(\"Bio\")\n    _parts.append(\"</label>\")\n    _parts.append(\"<textarea id=\\\"bio\\\" name=\\\"bio\\\" rows=\\\"4\\\">\")\n    _parts.append(escape(user.get('bio', '')))\n    _parts.append(\"</textarea>\")\n    _parts.append(\"</div>\")\n    _parts.append(\"<div class=\\\"field\\\">\")\n    _parts.append(\"<label for=\\\"avatar\\\">\")\n    _parts.append(\"Avatar\")\n    _parts.append(\"</label>\")\n    _parts.append(\"<input type=\\\"file\\\" id=\\\"avatar\\\" name=\\\"avatar\\\" accept=\\\"image/*\\\" />\")\n    _parts.append(\"</div>\")\n    _parts.append(\"<button type=\\\"submit\\\">\")\n    _parts.append(\"Save\")\n    _parts.append(\"</button>\")\n    _parts.append(\"</form>\")\n    return replace_markers(\"\".join(_parts))\n"
    type: python
ranges:
  - compiled_end: 63
    compiled_start: 53
    range_type: Python
    source_end: 10
    source_start: 0
  - compiled_end: 77
    compiled_start: 65
    range_type: Python
    source_end: 23
    source_start: 11
  - compiled_end: 92
    compiled_start: 79
    range_type: Python
    source_end: 37
    source_start: 24
  - compiled_end: 109
    compiled_start: 94
    range_type: Python
    source_end: 53
    source_start: 38
  - compiled_end: 717
    compiled_start: 703
    range_type: Python
    source_end: 521
    source_start: 507
  - compiled_end: 1749
    compiled_start: 1734
    range_type: Python
    source_end: 1203
    source_start: 1188
  - compiled_end: 2474
    compiled_start: 2459
    range_type: Python
    source_end: 1719
    source_start: 1704
