rust/transpiler/snapshots/edge_cases@forms@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/edge_cases/forms.hyper
---
from hyper import escape, replace_markers

def Forms(user: dict, errors: dict, options: list, csrf_token: str) -> str:
    _parts = []
    _parts.append("<form action=\"/submit/{user['id']}\" method=\"POST\" enctype=\"multipart/form-data\">")
    _parts.append("<input type=\"hidden\" name=\"csrf\" value=\"{csrf_token}\" />")
    _parts.append("<div class=\"field {'error' if errors.get('name') else ''}\">")
    _parts.append("<label for=\"name\">")
    _parts.append("Name")
    _parts.append("</label>")
    _parts.append("<input type=\"text\" id=\"name\" name=\"name\" value=\"{user.get('name', '')}\" required />")
    if errors.get('name'):
        _parts.append(f"""<span class="error">‹ESCAPE:{errors['name']}›</span>""")
    _parts.append("</div>")
    _parts.append("<div class=\"field\">")
    _parts.append("<label for=\"email\">")
    _parts.append("Email")
    _parts.append("</label>")
    _parts.append("<input type=\"email\" id=\"email\" name=\"email\" value=\"{user.get('email', '')}\" />")
    _parts.append("</div>")
    _parts.append("<div class=\"field\">")
    _parts.append("<label for=\"password\">")
    _parts.append("Password")
    _parts.append("</label>")
    _parts.append("<input type=\"password\" id=\"password\" name=\"password\" minlength=\"8\" />")
    _parts.append("</div>")
    _parts.append("<div class=\"field\">")
    _parts.append("<label for=\"role\">")
    _parts.append("Role")
    _parts.append("</label>")
    _parts.append("<select id=\"role\" name=\"role\">")
    for option in options:
        _parts.append(f"""<option value="{option['value']}" "selected" if option['value'] == user.get('role') else ""=‹SPREAD:{"selected" if option['value'] == user.get('role') else ""}›>‹ESCAPE:{option['label']}›</option>""")
    _parts.append("</select>")
    _parts.append("</div>")
    _parts.append("<div class=\"field\">")
    _parts.append("<input type=\"checkbox\" id=\"active\" name=\"active\" "checked" if user.get('active') else ""=\"{"checked" if user.get('active') else ""}\" />")
    _parts.append("<label for=\"active\">")
    _parts.append("Active")
    _parts.append("</label>")
    _parts.append("</div>")
    _parts.append("<div class=\"field\">")
    for option in options:
        _parts.append(f"""<label><input type="radio" name="type" value="{option['value']}" "checked" if option['value'] == user.get('type') else ""=‹SPREAD:{"checked" if option['value'] == user.get('type') else ""}› />‹ESCAPE:{option['label']}›</label>""")
    _parts.append("</div>")
    _parts.append("<div class=\"field\">")
    _parts.append("<label for=\"bio\">")
    _parts.append("Bio")
    _parts.append("</label>")
    _parts.append("<textarea id=\"bio\" name=\"bio\" rows=\"4\">")
    _parts.append(escape(user.get('bio', '')))
    _parts.append("</textarea>")
    _parts.append("</div>")
    _parts.append("<div class=\"field\">")
    _parts.append("<label for=\"avatar\">")
    _parts.append("Avatar")
    _parts.append("</label>")
    _parts.append("<input type=\"file\" id=\"avatar\" name=\"avatar\" accept=\"image/*\" />")
    _parts.append("</div>")
    _parts.append("<button type=\"submit\">")
    _parts.append("Save")
    _parts.append("</button>")
    _parts.append("</form>")
    return replace_markers("".join(_parts))
