rust/transpiler/snapshots/edge_cases@functions@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/edge_cases/functions.hyper
---
from hyper import escape, replace_markers

def Functions(name: str) -> str:
    _parts = []
    def greet(who: str):
        _parts.append(f"""<h1>Hello, ‹ESCAPE:{who}›!</h1>""")
    def make_badge(text: str, color: str = "blue") -> str:
        _parts.append(f"""<span class="badge badge-{color}">‹ESCAPE:{text}›</span>""")
    async def fetch_and_render(url: str):
        _parts.append(f"""<div class="loading">Fetching ‹ESCAPE:{url}›...</div>""")
    def render_list(items: list, title: str = "List"):
        _parts.append("<div class=\"list-container\">")
        _parts.append("<h2>")
        _parts.append(escape(title))
        _parts.append("</h2>")
        if items:
            _parts.append("<ul>")
            for item in items:
                _parts.append(f"""<li>‹ESCAPE:{item}›</li>""")
            _parts.append("</ul>")
        else:
            _parts.append("""<p>No items</p>""")
        _parts.append("</div>")
    greet(name)
    _parts.append(f"""‹ESCAPE:{make_badge("Admin", "red")}›""")
    return replace_markers("".join(_parts))
