rust/transpiler/snapshots/errors@mismatched_tags@error.snap
---
source: transpiler/tests/golden_tests.rs
expression: "format!(\"{}\", e)"
input_file: transpiler/tests/errors/mismatched_tags.hyper
---
<div> is never closed.
