rust/transpiler/snapshots/errors@missing_end@error.snap
---
source: transpiler/tests/golden_tests.rs
expression: "format!(\"{}\", e)"
input_file: transpiler/tests/errors/missing_end.hyper
---
This 'if' block is never closed.
