rust/transpiler/snapshots/errors@nested_interactive@error.snap
---
source: transpiler/tests/golden_tests.rs
expression: "format!(\"{}\", e)"
input_file: transpiler/tests/errors/nested_interactive.hyper
---
<button> cannot appear inside <a>.
