rust/transpiler/snapshots/errors@nested_unclosed_element@error.snap
---
source: transpiler/tests/golden_tests.rs
expression: "format!(\"{}\", e)"
input_file: transpiler/tests/errors/nested_unclosed_element.hyper
---
<span> is never closed.
